--- a/Project.toml
+++ b/Project.toml
@@ -8,3 +8,12 @@ Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
+
+[extras]
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
+CpuId = "adafc99b-e345-5852-983c-f28acb93d879"
+ReTestItems = "817f1d60-ba6b-4fd5-9520-3cf149f6a823"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Coverage", "CpuId", "ReTestItems", "Test"]
