--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,7 +59,7 @@ jobs:
           gistID: d12677a8265d5cff93a9737ecd36c305
           filename: UnboundedBNN__${{ github.ref_name }}.json
           label: Coverage
-          message: ${{ steps.coverage.outputs.total-coverage }}
+          message: "${{ steps.coverage.outputs.total-coverage }}%"
           valColorRange: ${{ steps.coverage.outputs.total-coverage }}
           minColorRange: 40
           maxColorRange: 90
